--- a/plugin.xml
+++ b/plugin.xml
@@ -118,7 +118,8 @@
                 android:label="@string/launcher_name"
                 android:exported="true"
                 android:taskAffinity="$PACKAGE_NAME"
-                android:launchMode="singleTask">
+                android:launchMode="singleTask"
+                android:theme="@android:style/Theme.Translucent.NoTitleBar">
                 <intent-filter>
                     <action android:name="android.intent.action.VIEW"/>
                     <category android:name="android.intent.category.DEFAULT"/>
