fix(sdk): make recommended SDK updates

--- a/android-build.gradle
+++ b/android-build.gradle
@@ -1,7 +1,8 @@
 repositories {
     jcenter()
+    mavenCentral()
 }
 
 dependencies {
-    implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
+    api 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
 }
