--- a/android-build.gradle
+++ b/android-build.gradle
@@ -4,5 +4,5 @@ repositories {
 }
 
 dependencies {
-    api 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:+'
+    api 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:6.8.0'
 }
