--- a/plugin.xml
+++ b/plugin.xml
@@ -100,7 +100,7 @@
 
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
             <activity
-                android:name=".wxapi.WXEntryActivity"
+                android:name="xu.li.cordova.wechat.wxapi.WXEntryActivity"
                 android:label="@string/launcher_name"
                 android:exported="true"
                 android:taskAffinity="$PACKAGE_NAME"
@@ -108,7 +108,7 @@
                 android:theme="@android:style/Theme.Translucent.NoTitleBar">
             </activity>
             <activity
-                android:name=".wxapi.WXPayEntryActivity"
+                android:name="xu.li.cordova.wechat.wxapi.WXPayEntryActivity"
                 android:label="@string/launcher_name"
                 android:exported="true"
                 android:launchMode="singleTop">
