--- a/plugin.xml
+++ b/plugin.xml
@@ -100,7 +100,7 @@
 
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
             <activity
-                android:name=".wxapi.WXEntryActivityy"
+                android:name=".wxapi.WXEntryActivity"
                 android:label="@string/launcher_name"
                 android:exported="true"
                 android:taskAffinity="$PACKAGE_NAME"
