--- a/plugin.xml
+++ b/plugin.xml
@@ -100,7 +100,7 @@
 
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
             <activity
-                android:name="xu.li.cordova.wechat.wxapi.WXEntryActivity"
+                android:name=".wxapi.EntryActivity"
                 android:label="@string/launcher_name"
                 android:exported="true"
                 android:taskAffinity="$PACKAGE_NAME"
@@ -110,7 +110,6 @@
         </config-file>
 
         <source-file src="src/android/Wechat.java" target-dir="src/xu/li/cordova/wechat" />
-        <source-file src="src/android/wxapi/WXEntryActivity.java" target-dir="src/xu/li/cordova/wechat/wxapi" />
         <framework src="android-build.gradle" custom="true" type="gradleReference" />
     </platform>
 </plugin>
