--- a/plugin.xml
+++ b/plugin.xml
@@ -112,7 +112,7 @@
                 <intent-filter>
                     <action android:name="android.intent.action.VIEW"/>
                     <category android:name="android.intent.category.DEFAULT"/>
-                    <data android:scheme="$WECHATAPPID"/>
+                    <data android:scheme="${weChatAppId}"/>
                 </intent-filter>
             </activity>
         </config-file>
