--- a/plugin.xml
+++ b/plugin.xml
@@ -81,11 +81,6 @@
 
     <!-- android -->
     <platform name="android">
-        <hook type="after_plugin_add" src="scripts/android-install.js" />
-        <hook type="after_plugin_install" src="scripts/android-install.js" />
-        <hook type="before_plugin_rm" src="scripts/android-install.js" />
-        <hook type="before_plugin_uninstall" src="scripts/android-install.js" />
-
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="Wechat">
                 <param name="android-package" value="xu.li.cordova.wechat.Wechat"/>
@@ -98,6 +93,8 @@
             <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
             <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
             <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+            <uses-permission android:name="${applicationId}.permission.WXEntryActivity"/>
+            <permission android:name="${applicationId}.permission.WXEntryActivity" android:protectionLevel="signature"></permission>
             <queries>
                 <package android:name="com.tencent.mm" />
             </queries>
@@ -105,28 +102,23 @@
 
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
             <activity
-                android:name=".wxapi.WXEntryActivity"
+                android:name="xu.li.cordova.wechat.wxapi.WXEntryActivity"
                 android:label="@string/launcher_name"
                 android:exported="true"
                 android:taskAffinity="$PACKAGE_NAME"
                 android:launchMode="singleTask"
-                android:theme="@android:style/Theme.Translucent.NoTitleBar">
-            </activity>
-            <activity
-                android:name=".wxapi.WXPayEntryActivity"
-                android:label="@string/launcher_name"
-                android:exported="true"
-                android:launchMode="singleTop">
+                android:theme="@android:style/Theme.Translucent.NoTitleBar"
+                android:permission="${applicationId}.permission.WXEntryActivity">
                 <intent-filter>
                     <action android:name="android.intent.action.VIEW"/>
                     <category android:name="android.intent.category.DEFAULT"/>
-                    <data android:scheme="$WECHATAPPID"/>
+                    <data android:scheme="@string/wechat_app_id"/>
                 </intent-filter>
             </activity>
         </config-file>
 
         <source-file src="src/android/Wechat.java" target-dir="src/xu/li/cordova/wechat" />
-        <source-file src="src/android/Util.java" target-dir="src/xu/li/cordova/wechat" />
+        <source-file src="src/android/wxapi/WXEntryActivity.java" target-dir="src/xu/li/cordova/wechat/wxapi" />
         <framework src="android-build.gradle" custom="true" type="gradleReference" />
     </platform>
 </plugin>
